...
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_edit_info">EditInfoActivity</string>
    <string name="your_birthday">Your BirthDay</string>
    <string name="your_profile">Your Profile</string>
    <string name="your_password">Your Password</string>
    <string name="login">Login</string>
    <string name="edit_info">Edit Info</string>
    <string name="first_name">First Name</string>
    <string name="gender">Gender</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="status_optional">Status (optional)</string>
...
    <string name="please_tab_to_refresh">Please tab to refresh.</string>
    <string name="firstname">firstName</string>
    <string name="status">status</string>
    <string name="dislike">DisLike</string>
    <string name="like">Like</string>
    <string name="your_phoneNumber">Your PhoneNumber</string>
    <string name="next">Next</string>
    <string name="firstname_age">FirstName, Age</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="your_gender">Your Gender</string>
    <string name="status2">Status</string>
    <string name="credit">Credit</string>
...
