<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.armhansa.app.cutepid.controller.LoginActivity">

    <FrameLayout
        android:id="@+id/mainLoginFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
