<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="7"
    tools:context="com.armhansa.app.cutepid.fragment_authen.SetBirthDayFragment">

    <TextView
        android:text="@string/your_birthday"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"/>


    <DatePicker
        android:id="@+id/birthDay"
        android:textColor="#FFFFFF"
        android:background="#FFF"
        android:layout_width="349dp"
        android:layout_height="0dp"
        android:layout_weight="5.4"
        android:layout_marginStart="19dp" />

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:background="#FF4444"
        android:padding="3dp"
        android:layout_weight="0.7">

        <Button
            android:id="@+id/nextBtn"
            android:text="@string/next"
            android:background="#FFF"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

</LinearLayout>
