...
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebookBtn"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal" />
    
    <TextView
...
